--- a/home.html
+++ b/home.html
@@ -265,7 +265,7 @@ section .title::after{
 
 /* about section styling */
 .about .title::after{
-    content: "who i am and what i do";
+    content: "who i am ";
 }
 .about .about-content .left{
     width: 45%;
@@ -1273,7 +1273,7 @@ footer .wave#wave4
                     <img src="images/Screenshot 2023-08-06 204021.png" alt="img">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Steven Muiruri and I'm az <span class="typing-2"></span></div>
+                    <div class="text">I'm Steven Muiruri and I'm am <span class="typing-2"></span></div>
                     <p> Balancing between being a passionate basketball player, a dedicated student at Murang'a University, and a skilled programmer. Embracing the court's challenges, academic growth, and coding adventures. Let's connect and share these incredible facets of my journey! </p>
                 
                 </div>
