--- a/home.html
+++ b/home.html
@@ -602,7 +602,7 @@ section .title::after{
     right: 50px;
     width: 100px;
     height: 100px;  
-    opacity: 1;
+    /* opacity: 1; */
     background: url("https://cdn.icon-icons.com/icons2/935/PNG/512/video-camera-outline_icon-icons.com_73112.png") no-repeat;
     background-size: 100px;
     background-position: center;
@@ -623,7 +623,7 @@ section .title::after{
     bottom: -50px;
     right: 50px;
     width: 100px;
-    height: 100px;  
+    height: 100px;      
     opacity: 1;
     background: url("https://cdn.icon-icons.com/icons2/1145/PNG/512/codeoutlinedprogrammingsigns_81143.png") no-repeat;
     background-size: 100px;
@@ -1255,7 +1255,7 @@ footer .wave#wave4
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">...STEVEN MUIRURI...</div>
+                <div class="text-2">STEVEN MUIRURI...</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <div class="classbox">
                 <a href="#">Contact Me</a>
@@ -1420,7 +1420,7 @@ footer .wave#wave4
                         <img src="images/logo3.png" alt="img">
                         <div class="text">Steven's Website</div>
                         <p>This is my Website.</p>
-                        <a href="https://deepcomputer.edu.np/" class="project" target="_blank">View Project</a>
+                        <a href="https://github.com/StevenKariuki/portfolio_Steve" class="project" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -1434,7 +1434,7 @@ footer .wave#wave4
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>If you are interested in working together? Please fill out the form aside with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.</p>
+                    <p>If you are interested in working together? Please fill out the form aside with some info about your interests and we can work together and come up with awseome ideas.Coding is fun.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
