--- a/home.html
+++ b/home.html
@@ -490,7 +490,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/2334/PNG/512/pen_tool_anchor_point_design_icon_142354.png") no-repeat;
+    background: url("https://t3.ftcdn.net/jpg/02/16/58/16/240_F_216581692_Lyn0XUFdWeFxVbF0wSdKhlYnBqs9F2tQ.jpg") no-repeat;
     background-size: 100px;
     background-position: center;
     filter:invert(100%);
@@ -514,7 +514,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/2066/PNG/512/search_icon_125165.png") no-repeat;
+    background: url("https://cdn-icons-png.flaticon.com/128/3074/3074058.png") no-repeat;
     background-size: 100px;
     background-position: center;
     filter:invert(100%);
@@ -526,7 +526,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/935/PNG/512/video-camera-outline_icon-icons.com_73112.png") no-repeat;
+    background: url("https://icon-library.com/images/eating-icon/eating-icon-22.jpg") no-repeat;
     background-size: 100px;
     background-position: center;
     filter:invert(100%);
@@ -538,7 +538,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/620/PNG/512/bars-chart-ascending_icon-icons.com_56865.png") no-repeat;
+    background: url("https://cdn-icons-png.flaticon.com/128/9826/9826063.png") no-repeat;
     background-size: 100px;
     background-position: center;
     filter:invert(100%);
@@ -591,7 +591,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/620/PNG/512/bars-chart-ascending_icon-icons.com_56865.png") no-repeat;
+    background: url("https://cdn-icons-png.flaticon.com/128/9826/9826063.png") no-repeat;
     background-size: 100px;
     background-position: center;
 }
@@ -602,8 +602,8 @@ section .title::after{
     right: 50px;
     width: 100px;
     height: 100px;  
-    /* opacity: 1; */
-    background: url("https://cdn.icon-icons.com/icons2/935/PNG/512/video-camera-outline_icon-icons.com_73112.png") no-repeat;
+    opacity: 1;
+    background: url("https://icon-library.com/images/eating-icon/eating-icon-22.jpg") no-repeat;
     background-size: 100px;
     background-position: center;
 }
@@ -614,7 +614,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/2066/PNG/512/search_icon_125165.png") no-repeat;
+    background: url("https://cdn-icons-png.flaticon.com/128/3074/3074058.png") no-repeat;
     background-size: 100px;
     background-position: center;
 }
@@ -636,7 +636,7 @@ section .title::after{
     width: 100px;
     height: 100px;  
     opacity: 1;
-    background: url("https://cdn.icon-icons.com/icons2/2334/PNG/512/pen_tool_anchor_point_design_icon_142354.png") no-repeat;
+    background: url("https://t3.ftcdn.net/jpg/02/16/58/16/240_F_216581692_Lyn0XUFdWeFxVbF0wSdKhlYnBqs9F2tQ.jpg") no-repeat;
     background-size: 100px;
     background-position: center;
 }
