--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@ footer .wave#wave4
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Since beginning my journey as a freelance developer nearly 4 month ago, I've studied different languages in tech from development languanges like HTML and etc.
+                    <p>Since beginning my journey as a freelance developer nearly 4 months ago, I've studied different languages in tech from development languanges like HTML and etc.
                         <br><br>
                         Since i finished my studies this is acually my first Website that i have hosted online.I kinda feel nice about it. The main area of my expertise is front-end development, HTML, CSS, JS, building small and medium web apps.
                         <br><br>
@@ -1441,6 +1441,13 @@ footer .wave#wave4
                             <div class="info">
                                 <div class="head">Name</div>
                                 <div class="sub-title"> STEVEN MURURI</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Contact</div>
+                                <div class="sub-title">Phone, 0768216484</div>
                             </div>
                         </div>
                         <div class="row">
