--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@ footer .wave#wave4
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">stevenkariuki975321@gmail.com</div>
+                                <div class="sub-title">steven.kariuki9@outlook.com</div>
                             </div>
                         </div>
                     </div>
