--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@ footer .wave#wave4
 
     // typing text animation script
     var typed = new Typed(".typing", {
-        strings: ["Front end developer","Fresher in Muranga","Basketballer", "Programmer", "Mr.Tall guy"],
+        strings: ["Front end developer","Student in Muranga","Basketballer", "Programmer", "Mr.Tall guy"],
         typeSpeed: 50,
         backSpeed: 60,
         loop: true
