--- a/index.html
+++ b/index.html
@@ -1598,7 +1598,7 @@ footer .wave#wave4
     });
 
     var typed = new Typed(".typing-2", {
-        strings: ["Front end developer","Fresher in Muranga" ,"Basketballer", "Programmer", "Mr.Tall guy"],
+        strings: ["Front end developer","Student in Muranga" ,"Basketballer", "Programmer", "Mr.Tall guy"],
         typeSpeed: 50,
         backSpeed: 60,
         loop: true
