--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Steven Kariuki</title>
     <style>
         /*  import google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://www.upwork.com/nx/plans/membership/index');
 
 *{
     margin: 0;
@@ -178,7 +178,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("https://www.teahub.io/photos/full/346-3462089_simple-graphic-designer-background.jpg") no-repeat center;
+    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds&psig=AOvVaw3EpyiT1boUNpwy3RRhfoOG&ust=1706124890430000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMDCm-Cg9IMDFQAAAAAdAAAAABAD") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
