--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds&psig=AOvVaw3EpyiT1boUNpwy3RRhfoOG&ust=1706124890430000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMDCm-Cg9IMDFQAAAAAdAAAAABAD") no-repeat center;
+    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Ftechnology-background&psig=AOvVaw09s5QdiQuaLrRkEcqCx9dA&ust=1709734848611000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCPCg8uSo3YQDFQAAAAAdAAAAABAE") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
