--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/Me1.jpg">
     <title>Steven Kariuki</title>
     <style>
         /*  import google fonts */
@@ -178,7 +179,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("https://th.bing.com/th/id/OIG4.JbagbR62omnE23mZgwm3?w=1024&h=1024&rs=1&pid=ImgDetMain") no-repeat center;
+    background-image:url(images/istockphoto-1286354786-612x612.jpg);
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -1222,6 +1223,7 @@ footer .wave#wave4
 }
 
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -1235,7 +1237,7 @@ footer .wave#wave4
  <div id="preloader"></div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">VI_BRANT_<span>LEGO</span></a></div>
+            <div class="logo"><a href="#about">VI_BRANT_<span>LEGO</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -1270,12 +1272,11 @@ footer .wave#wave4
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/Screenshot 2023-08-06 204021.png" alt="img">
+                    <img class="img" src="images/WhatsApp Image 2024-01-07 at 9.49.15 PM.jpeg" alt="img">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Steven Muiruri and I'm am <span class="typing-2"></span></div>
-                    <p> Balancing between being a passionate basketball player, a dedicated student at Murang'a University, and a skilled programmer. Embracing the court's challenges, academic growth, and coding adventures. Let's connect and share these incredible facets of my journey! </p>
-                
+                    <p> Balancing between being a passionate basketball player, a dedicated student at Murang'a University, and a skilled programmer. Embracing the court's challenges, academic growth, and coding adventures. My interest in Technology began way back when i was in highschool.I could imagine great things one could achive with Technology ,e,g come up with solutions to solve a problem and at the end of it all one could have saved a lot of people and also lives.So thats when I decided to do it.Hope i'll make a great impact in the the society.Let's connect and share these incredible facets of my journey! </p>
                 </div>
             </div>
         </div>
@@ -1293,7 +1294,7 @@ footer .wave#wave4
             <span id="first"> </span>
             <div class="content">
                 <h2>BASKETBALLER</h2>
-                <p>Dribbling through life with a basketball in hand, finding unity, discipline, and joy in the rhythmic bounce of the game..</p>
+                <p>Dribbling through life with a basketball in hand, finding unity, discipline, and joy in the rhythmic bounce of the game.</p>
             </div>
         </div>
         <div class="box">
@@ -1313,7 +1314,7 @@ footer .wave#wave4
         <div class="box">
             <span id="fourth"></span>
             <div class="content">
-                <h2>Eating</h2>
+                <h2>Food</h2>
                 <p>Savoring flavors and nourishing my body, I explore the culinary world one bite at a time. Food is an adventure!I really like eating it's just Dope</p>
             </div>
         </div>
@@ -1522,7 +1523,7 @@ footer .wave#wave4
             </li>
         </ul>
        
-        <p>&copy; 2023 <a href="https://StevenKariuki.com.np/" target="_blank">Developed by Steven</a> | All Rights Reserved |</p>
+        <p>&copy; 2024 <a href="https://StevenKariuki.com.np/" target="_blank">Developed by Steven</a> | All Rights Reserved |</p>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
