--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ section .title::after{
     display: flex;
     background-image:url(images/istockphoto-1286354786-612x612.jpg);
     height: 100vh;
-    color: #fff;
+    /* color: #fff; */
     min-height: 500px;
     background-size: cover;
     background-attachment: fixed;
